--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -130,5 +130,29 @@
 	},
 	"dialogue": {
 		"Introduction": "Hi! click the quick reply button of type in your questions to choose what to do!"
+	},
+	"AppConfig": {
+		"General_Settings": "General Settings",
+		"Enable_Join_by_code": "Enable Join by code",
+		"Enable_Create_Room": "Enable Create Room",
+		"Enable_Memory_Use_Log": "Enable Memory Use Log",
+		"AI_Settings": "AI Settings",
+		"Chat_AI_Model": "Chat AI Model",
+		"Chat_AI_Temperature": "Chat AI Temperature",
+		"Client_Settings": "Client Settings",
+		"AutoReply": "Auto Reply from AI",
+		"Reply_Time_ms": "Reply Time ms",
+		"Screenshot_Interval_min": "Screenshot Interval min",
+		"Code_Execution_Limits": "Code Execution(VM) Limits",
+		"Max_CodeRangeSizeMb": "Max CodeRangeSize in Mb",
+		"Max_OldGenerationSizeMb": "Max OldGenerationSize in Mb",
+		"Max_YoungGenerationSizeMb": "Max YoungGenerationSize in Mb",
+		"Max_Num_Message_Queue": "Max Num Message Queue on VM",
+		"Max_CPU_Usage": "Max CPU Usage on VM",
+		"Client_Sentry_Settings": "Client Sentry Settings",
+		"Sentry_DSN": "Sentry DSN(Leave empty to disable)",
+		"replaysOnErrorSampleRate": "Sample Rate for Replays on Error",
+		"replaysSessionSampleRate": "Sample Rate for Replays on Session",
+		"tracesSampleRate": "Sample Rate for Traces"
 	}
 }
