--- a/src/i18n/ja.json
+++ b/src/i18n/ja.json
@@ -19,6 +19,7 @@
 	"navbar": {
 		"connected": "接続されています",
 		"leave": "やめる",
+		"saveAndLeave": "保存してやめる",
 		"reconnecting": "切断されました。\n再接続しようとしています。",
 		"home": "ホーム",
 		"signout": "サインアウト",
@@ -39,7 +40,11 @@
 		"welcome": "AIを使ってプログラミングを学ぼう。",
 		"debuginfo": "デバッグ情報",
 		"serverDownMsg": "サーバーに接続できません。インターネットを確認するか、管理者にお問い合わせください。",
-		"aboutText": "このアプリは、LLM（AI）を利用したチュートリアルを提供するセルフホストソフトウェアです。  このアプリケーションを利用すると、サイトの管理者は個人を特定できない形で、ユーザーの利用状況や、発言のデータを収集することができ、収集されたデータはアプリ内のチャット機能の学習や、AIの挙動改善に利用されます。  アプリで提供されたデータの取扱の詳しい情報については、ウェブサイトの管理者にお問い合わせください。このアプリケーションはオープンソースで公開されており、ソースコードが改変されている可能性もあるため、ウェブサイトの管理者が不明な場合、アプリケーションを利用しないことをお勧めします。  作成したセッションの情報のデータは削除されることがあります。"
+		"aboutText": "このアプリは、LLM（AI）を利用したチュートリアルを提供するセルフホストソフトウェアです。  このアプリケーションを利用すると、サイトの管理者は個人を特定できない形で、ユーザーの利用状況や、発言のデータを収集することができ、収集されたデータはアプリ内のチャット機能の学習や、AIの挙動改善に利用されます。  アプリで提供されたデータの取扱の詳しい情報については、ウェブサイトの管理者にお問い合わせください。このアプリケーションはオープンソースで公開されており、ソースコードが改変されている可能性もあるため、ウェブサイトの管理者が不明な場合、アプリケーションを利用しないことをお勧めします。  作成したセッションの情報のデータは削除されることがあります。",
+		"findSavedSession": "保存したデータをつかう",
+		"noSavedSession": "セーブしたセッションが見つかりませんでした",
+		"savedSession": "セーブしたセッション",
+		"continueSession": "セッションをつづける"
 	},
 	"sidebar": {
 		"dashboard": "ダッシュボード",
@@ -129,7 +134,8 @@
 		"WhatINeed": "何をしたらいいの？"
 	},
 	"dialogue": {
-		"Introduction": "こんにちは！まずは画面下のボタンや、チャット欄から、何をしたいか決めましょう！"
+		"Introduction": "こんにちは！まずは画面下のボタンや、チャット欄から、何をしたいか決めましょう！",
+		"NewSessionWithData": "保存済みのデータから、セッションを開始しました"
 	},
 	"AppConfig": {
 		"AI_Settings": "AI設定",
