⚡️ Update initial session value

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -130,7 +130,8 @@
 	},
 	"quickReply": {
 		"WhatINeed": "What I need to do?",
-		"HowToUse": "How to use this?"
+		"HowToUse": "How to use this?",
+		"BeginTutorial": "Begin tutorial"
 	},
 	"dialogue": {
 		"Introduction": "Hi! click the quick reply button of type in your questions to choose what to do!",
