--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,165 +1,166 @@
 {
-	"session": {
-		"creating": "creating...",
-		"joinsession": "join with code",
-		"sessionNotFoundMsg": "Session not found. Type another code or create a new session to start.",
-		"hello": "Hello",
-		"or": "or",
-		"createSession": "Create new room",
-		"typecodeMsg": "Type your code, or create new room to start.",
-		"about": "About this app",
-		"welcome": "Study coding with AI",
-		"debuginfo": "Debug Info",
-		"serverDownMsg": "Can not connect server. Check your internet or ask system administrator.",
-		"aboutText": "This application is self-hosted software that provides tutorials using LLM (AI).  The application allows the site administrator to collect data on user usage and statements made in a non-personally identifiable form, and the data collected is used to learn the chat function in the app and to improve the AI's behaviour.  For further information on the handling of data provided by the app, please contact the website administrator. As the application is published as open source and the source code may have been modified, it is recommended not to use the application if the website administrator is unknown.  Data on information about sessions created may be deleted.",
-		"findSavedSession": "Use saved data",
-		"noSavedSession": "No saved session found",
-		"savedSession": "Saved Session",
-		"continueSession": "Continue this session"
-	},
-	"navbar": {
-		"leave": "leave",
-		"saveAndLeave": "save and leave",
-		"connected": "connected",
-		"reconnecting": "disconnected. attempting to reconnect.",
-		"home": "Home",
-		"signout": "Sign out",
-		"noTutorial": "No tutorial has selected",
-		"joinCode": "Join Code",
-		"reload": "Reload",
-		"execSwitch": "Run Code"
-	},
-	"execSwitch": {
-		"label": "Run code",
-		"Running": "Running",
-		"Stopped": "Stopped"
-	},
-	"error": {
-		"empty_code": "Code is invalid or empty",
-		"error": "Error"
-	},
-	"login": {
-		"welcome": "Login to continue",
-		"title": "Login",
-		"username": "Username",
-		"password": "Password",
-		"login": "Login",
-		"loginFailed": "Login failed"
-	},
-	"sidebar": {
-		"dashboard": "Dashboard",
-		"tutorials": "Tutorials",
-		"users": "Users",
-		"settings": "Settings",
-		"sessions": "Sessions",
-		"toggle": "Sidebar",
-		"trainingForAI": "AI Training"
-	},
-	"textbubble": {
-		"log": "Log",
-		"server": "Server",
-		"ai": "AI",
-		"you": "You",
-		"block": "Block",
-		"findBlock": "Find block",
-		"findBlockFromMenu": "Find from menu",
-		"replying": "Replying...",
-		"ask": "Ask anything...",
-		"showingLatest": "Showing latest {{count}} messages",
-		"errorLog": "Error Log",
-		"copiedToClipboard": "Copied!",
-		"blocksuggestions": "Suggested block"
-	},
-	"tutorial": {
-		"title": "Pick Tutorial",
-		"description": "Choose what you want to learn",
-		"start": "Start Tutorial",
-		"startTutorial": "Tutorial has selected",
-		"tour": "Start Tour",
-		"startTour": "Look what you can do.",
-		"easyMode": "Easy Mode",
-		"easyModeDescription": "AI's response will be more easier.",
-		"easyModeChanged": "Turn Easy mode to {{status}}"
-	},
-	"vm": {
-		"outOfMemory": "Machine reached memory limit",
-		"updatedScriptSuccess": "Updated script executed successfully.",
-		"updatedScriptError": "Error executing updated script: {{error}}"
-	},
-	"logbuffer": {
-		"tooManyLogs": "Too many messages. old logs removed."
-	},
-	"generic": {
-		"connected": "Connected"
-	},
-	"tour": {
-		"joinCode": "This is code for this session. You can return back here with saving this code for next time.",
-		"blocklyWorkspace": "Workspace is place to make your code.",
-		"dialogue": "You can talk with AI for any help, or take a lesson from AI with tutorial.",
-		"tourAgain": "You can take this tour again with click this button.",
-		"execSwitch": "You can run your code on workspace.",
-		"tutorialSelector": "You can select any tutorial that you want to make.",
-		"welcome": "Welcome on board! This tour provides a brief overview of how to use this application.",
-		"tabs": "You can switch the tabs to move between chat and workspace.",
-		"switchToWorkspace": "Let's switch to workspace.",
-		"syncCode": "You can update code from here",
-		"switchToDialogue": "Okay, let's back to chat tab."
-	},
-	"extention": {
-		"minecraft-core": {
-			"connectInfo": "Connect your Minecraft from **/connect {{host}}/vm/{{userCode}}/mc**. Try again if connection failed. Turn off encryption request."
-		}
-	},
-	"editor": {
-		"workspaceTab": "Workspace",
-		"dialogueTab": "Chat"
-	},
-	"on": "On",
-	"off": "Off",
-	"admin": {
-		"sessionAnalytics": "Session Analytics",
-		"sessionCode": "Session Code",
-		"sessionLanguage": "Language",
-		"sessionEasyMode": "Easy Mode",
-		"summary": "Summary",
-		"workspace": "Workspace",
-		"loading": "Loading",
-		"sessionSummary": "Session summary",
-		"showHeatmap": "Show Heatmap",
-		"noScreenshotAvailable": "No screenshot available"
-	},
-	"quickReply": {
-		"WhatINeed": "What I need to do?",
-		"HowToUse": "How to use this?",
-		"BeginTutorial": "Begin tutorial"
-	},
-	"dialogue": {
-		"Introduction": "Hi! click the quick reply button of type in your questions to choose what to do!",
-		"NewSessionWithData": "Starting new sesssion with saved data"
-	},
-	"AppConfig": {
-		"General_Settings": "General Settings",
-		"Enable_Join_by_code": "Enable Join by code",
-		"Enable_Create_Room": "Enable Create Room",
-		"Enable_Memory_Use_Log": "Enable Memory Use Log",
-		"AI_Settings": "AI Settings",
-		"Chat_AI_Model": "Chat AI Model",
-		"Chat_AI_Temperature": "Chat AI Temperature",
-		"Client_Settings": "Client Settings",
-		"AutoReply": "Auto Reply from AI",
-		"Reply_Time_ms": "Reply Time ms",
-		"Screenshot_Interval_min": "Screenshot Interval min",
-		"Code_Execution_Limits": "Code Execution(VM) Limits",
-		"Max_CodeRangeSizeMb": "Max CodeRangeSize in Mb",
-		"Max_OldGenerationSizeMb": "Max OldGenerationSize in Mb",
-		"Max_YoungGenerationSizeMb": "Max YoungGenerationSize in Mb",
-		"Max_Num_Message_Queue": "Max Num Message Queue on VM",
-		"Max_CPU_Usage": "Max CPU Usage on VM",
-		"Client_Sentry_Settings": "Client Sentry Settings",
-		"Sentry_DSN": "Sentry DSN(Leave empty to disable)",
-		"replaysOnErrorSampleRate": "Sample Rate for Replays on Error",
-		"replaysSessionSampleRate": "Sample Rate for Replays on Session",
-		"tracesSampleRate": "Sample Rate for Traces",
-		"GA_Tracking_ID": "Google Analytics Tracking ID"
-	}
+  "session": {
+    "creating": "creating...",
+    "joinsession": "join with code",
+    "sessionNotFoundMsg": "Session not found. Type another code or create a new session to start.",
+    "hello": "Hello",
+    "or": "or",
+    "createSession": "Create new room",
+    "typecodeMsg": "Type your code, or create new room to start.",
+    "about": "About this app",
+    "welcome": "Study coding with AI",
+    "debuginfo": "Debug Info",
+    "serverDownMsg": "Can not connect server. Check your internet or ask system administrator.",
+    "aboutText": "This application is self-hosted software that provides tutorials using LLM (AI).  The application allows the site administrator to collect data on user usage and statements made in a non-personally identifiable form, and the data collected is used to learn the chat function in the app and to improve the AI's behaviour.  For further information on the handling of data provided by the app, please contact the website administrator. As the application is published as open source and the source code may have been modified, it is recommended not to use the application if the website administrator is unknown.  Data on information about sessions created may be deleted.",
+    "findSavedSession": "Use saved data",
+    "noSavedSession": "No saved session found",
+    "savedSession": "Saved Session",
+    "continueSession": "Continue this session",
+    "deleteSession": "Delete this session"
+  },
+  "navbar": {
+    "leave": "leave",
+    "saveAndLeave": "save and leave",
+    "connected": "connected",
+    "reconnecting": "disconnected. attempting to reconnect.",
+    "home": "Home",
+    "signout": "Sign out",
+    "noTutorial": "No tutorial has selected",
+    "joinCode": "Join Code",
+    "reload": "Reload",
+    "execSwitch": "Run Code"
+  },
+  "execSwitch": {
+    "label": "Run code",
+    "Running": "Running",
+    "Stopped": "Stopped"
+  },
+  "error": {
+    "empty_code": "Code is invalid or empty",
+    "error": "Error"
+  },
+  "login": {
+    "welcome": "Login to continue",
+    "title": "Login",
+    "username": "Username",
+    "password": "Password",
+    "login": "Login",
+    "loginFailed": "Login failed"
+  },
+  "sidebar": {
+    "dashboard": "Dashboard",
+    "tutorials": "Tutorials",
+    "users": "Users",
+    "settings": "Settings",
+    "sessions": "Sessions",
+    "toggle": "Sidebar",
+    "trainingForAI": "AI Training"
+  },
+  "textbubble": {
+    "log": "Log",
+    "server": "Server",
+    "ai": "AI",
+    "you": "You",
+    "block": "Block",
+    "findBlock": "Find block",
+    "findBlockFromMenu": "Find from menu",
+    "replying": "Replying...",
+    "ask": "Ask anything...",
+    "showingLatest": "Showing latest {{count}} messages",
+    "errorLog": "Error Log",
+    "copiedToClipboard": "Copied!",
+    "blocksuggestions": "Suggested block"
+  },
+  "tutorial": {
+    "title": "Pick Tutorial",
+    "description": "Choose what you want to learn",
+    "start": "Start Tutorial",
+    "startTutorial": "Tutorial has selected",
+    "tour": "Start Tour",
+    "startTour": "Look what you can do.",
+    "easyMode": "Easy Mode",
+    "easyModeDescription": "AI's response will be more easier.",
+    "easyModeChanged": "Turn Easy mode to {{status}}"
+  },
+  "vm": {
+    "outOfMemory": "Machine reached memory limit",
+    "updatedScriptSuccess": "Updated script executed successfully.",
+    "updatedScriptError": "Error executing updated script: {{error}}"
+  },
+  "logbuffer": {
+    "tooManyLogs": "Too many messages. old logs removed."
+  },
+  "generic": {
+    "connected": "Connected"
+  },
+  "tour": {
+    "joinCode": "This is code for this session. You can return back here with saving this code for next time.",
+    "blocklyWorkspace": "Workspace is place to make your code.",
+    "dialogue": "You can talk with AI for any help, or take a lesson from AI with tutorial.",
+    "tourAgain": "You can take this tour again with click this button.",
+    "execSwitch": "You can run your code on workspace.",
+    "tutorialSelector": "You can select any tutorial that you want to make.",
+    "welcome": "Welcome on board! This tour provides a brief overview of how to use this application.",
+    "tabs": "You can switch the tabs to move between chat and workspace.",
+    "switchToWorkspace": "Let's switch to workspace.",
+    "syncCode": "You can update code from here",
+    "switchToDialogue": "Okay, let's back to chat tab."
+  },
+  "extention": {
+    "minecraft-core": {
+      "connectInfo": "Connect your Minecraft from **/connect {{host}}/vm/{{userCode}}/mc**. Try again if connection failed. Turn off encryption request."
+    }
+  },
+  "editor": {
+    "workspaceTab": "Workspace",
+    "dialogueTab": "Chat"
+  },
+  "on": "On",
+  "off": "Off",
+  "admin": {
+    "sessionAnalytics": "Session Analytics",
+    "sessionCode": "Session Code",
+    "sessionLanguage": "Language",
+    "sessionEasyMode": "Easy Mode",
+    "summary": "Summary",
+    "workspace": "Workspace",
+    "loading": "Loading",
+    "sessionSummary": "Session summary",
+    "showHeatmap": "Show Heatmap",
+    "noScreenshotAvailable": "No screenshot available"
+  },
+  "quickReply": {
+    "WhatINeed": "What I need to do?",
+    "HowToUse": "How to use this?",
+    "BeginTutorial": "Begin tutorial"
+  },
+  "dialogue": {
+    "Introduction": "Hi! click the quick reply button of type in your questions to choose what to do!",
+    "NewSessionWithData": "Starting new sesssion with saved data"
+  },
+  "AppConfig": {
+    "General_Settings": "General Settings",
+    "Enable_Join_by_code": "Enable Join by code",
+    "Enable_Create_Room": "Enable Create Room",
+    "Enable_Memory_Use_Log": "Enable Memory Use Log",
+    "AI_Settings": "AI Settings",
+    "Chat_AI_Model": "Chat AI Model",
+    "Chat_AI_Temperature": "Chat AI Temperature",
+    "Client_Settings": "Client Settings",
+    "AutoReply": "Auto Reply from AI",
+    "Reply_Time_ms": "Reply Time ms",
+    "Screenshot_Interval_min": "Screenshot Interval min",
+    "Code_Execution_Limits": "Code Execution(VM) Limits",
+    "Max_CodeRangeSizeMb": "Max CodeRangeSize in Mb",
+    "Max_OldGenerationSizeMb": "Max OldGenerationSize in Mb",
+    "Max_YoungGenerationSizeMb": "Max YoungGenerationSize in Mb",
+    "Max_Num_Message_Queue": "Max Num Message Queue on VM",
+    "Max_CPU_Usage": "Max CPU Usage on VM",
+    "Client_Sentry_Settings": "Client Sentry Settings",
+    "Sentry_DSN": "Sentry DSN(Leave empty to disable)",
+    "replaysOnErrorSampleRate": "Sample Rate for Replays on Error",
+    "replaysSessionSampleRate": "Sample Rate for Replays on Session",
+    "tracesSampleRate": "Sample Rate for Traces",
+    "GA_Tracking_ID": "Google Analytics Tracking ID"
+  }
 }
