--- a/src/i18n/ko.json
+++ b/src/i18n/ko.json
@@ -53,7 +53,7 @@
 		"Stopped": "중지됨",
 		"label": "코드 실행"
 	},
-	"extention": {
+	"extension": {
 		"minecraft-core": {
 			"connectInfo": "**/connect {{host}}/vm/{{userCode}}/mc**에서 Minecraft를 연결하세요. \n연결이 실패하면 다시 시도하세요. \n암호화 요청을 끄십시오."
 		}
