🌐 Update translation file

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -113,7 +113,8 @@
 	},
 	"extension": {
 		"minecraft-core": {
-			"connectInfo": "Connect your Minecraft from **/connect {{host}}/vm/{{userCode}}/mc**. Try again if connection failed. Turn off encryption request."
+			"connectInfo": "Connect your Minecraft from **/connect {{host}}/vm/{{userCode}}/mc**. Try again if connection failed. Turn off encryption request.",
+			"noConnection": "Minecraft is not connected."
 		}
 	},
 	"editor": {
