--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -84,7 +84,10 @@
 		"startTour": "Look what you can do.",
 		"easyMode": "Easy Mode",
 		"easyModeDescription": "AI's response will be more easier.",
-		"easyModeChanged": "Turn Easy mode to {{status}}"
+		"easyModeChanged": "Turn Easy mode to {{status}}",
+		"yourLanguage": "Tutorial for your language",
+		"otherLanguage": "Tutorial by other language",
+		"otherLanguageDescription": "As these tutorials being translated to provide, might be inaccurate."
 	},
 	"vm": {
 		"outOfMemory": "Machine reached memory limit",
@@ -96,7 +99,8 @@
 	},
 	"generic": {
 		"connected": "Connected",
-		"websocketNotConnected": "Websocket is not connected"
+		"websocketNotConnected": "Websocket is not connected",
+		"open": "Open"
 	},
 	"tour": {
 		"joinCode": "This is code for this session. You can return back here with saving this code for next time.",
