✨ ⚡️ 💥 Multimodal support with openai-audio-preview

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -73,7 +73,10 @@
 		"showingLatest": "Showing latest {{count}} messages",
 		"errorLog": "Error Log",
 		"copiedToClipboard": "Copied!",
-		"blocksuggestions": "Suggested block"
+		"blocksuggestions": "Suggested block",
+		"audioMode": "Audio mode",
+		"transcribing": "transcribing...",
+		"transcriptionFailed": "Transcription is unavailable"
 	},
 	"tutorial": {
 		"title": "Pick Tutorial",
@@ -87,7 +90,10 @@
 		"easyModeChanged": "Turn Easy mode to {{status}}",
 		"yourLanguage": "Tutorial for your language",
 		"otherLanguage": "Tutorial by other language",
-		"otherLanguageDescription": "As these tutorials being translated to provide, might be inaccurate."
+		"otherLanguageDescription": "As these tutorials being translated to provide, might be inaccurate.",
+		"responseMode": "Response Mode",
+		"responseModeDescription": "Switch preferred response mode into audio or text",
+		"responseModeChanged": "Response mode has changed to {{mode}}."
 	},
 	"vm": {
 		"outOfMemory": "Machine reached memory limit",
@@ -100,7 +106,9 @@
 	"generic": {
 		"connected": "Connected",
 		"websocketNotConnected": "Websocket is not connected",
-		"open": "Open"
+		"open": "Open",
+		"audio": "Audio",
+		"text": "Text"
 	},
 	"tour": {
 		"joinCode": "This is code for this session. You can return back here with saving this code for next time.",
